--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,17 +4,39 @@ title: About
 date: 2021-03-19
 ---
 
-# Your Name
+# Kakise's Blog
 
-Hey, I'm a Senior Software Engineer at Company. I enjoy working with Next.js and crafting beautiful front-end experiences.
+Hola ! My name is Kakise and I am currently working as an Embedded System Software Engineer. I mainly use C++ at work and for academic research. I also code in Python and
+I used to use TypeScript/React in my previous position.
 
-This portfolio is built with **Next.js** and a library called [Nextra](https://nextra.vercel.app/). It allows you to write Markdown and focus on the _content_ of your portfolio.
+Here I will post about my various projects and findings.
 
-[**Deploy your own**](https://vercel.com/new/git/external?repository-url=https://github.com/vercel-solutions/nextjs-portfolio-starter&project-name=portfolio&repository-name=portfolio) in a few minutes.
+I started programming when I was a kid and kept the passion ever since. I've been contributing to some open-source projects here and there and I am currently the maintainer
+of the following repos:
+
+- A Dyson integration to interface locally with your Dyson devices in homeassistant [@shenxn/ha-dyson](https://github.com/shenxn/ha-dyson)
+- A Dyson library to communicate with Dyson devices in your network [@shenxn/libdyson](https://github.com/shenxn/libdyson)
+
+And I previously made a homebridge plugin to have Tuya door sensors in HomeKit but it got depreceated since the release of the official Tuya homebridge plugin.
+
+### Research Works
+
+- Traffic analysis and prediction
+- Remote control and fire of mortar batteries
+- (IN PROGRESS) Automatic projection of satellite imaging on LIDAR made point clouds
+
+### Work Experience
+
+- C++ Developer @ Coop-R, Paris - 04/2022, now
+- Tech transition chief @ Immocitiz, Paris - 06/2021, 02/2022
+- Software Engineering Consultant @ Independent contractor, Paris - 02/2020, 06/2021
+
+### Academic experience
+
+- MSc in Mathematics @ Sorbonne University
+- BSc in Mathematics @ Military Preparatory School of Saint-Cyr
 
 ---
 
-- Twitter [@yourname](https://twitter.com/yourname)
-- GitHub [@yourname](https://github.com/yourname)
-- Instagram [@yourname](https://instagram.com/yourname)
-- Email your@name.com
+- Twitter [@Kakise](https://twitter.com/Kakise)
+- GitHub [@Kakise](https://github.com/Kakise)
