--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -38,5 +38,5 @@ And I previously made a homebridge plugin to have Tuya door sensors in HomeKit b
 
 ---
 
-- Twitter [@Kakise](https://twitter.com/Kakise)
+- Twitter [@STaaissat](https://twitter.com/STaaissat)
 - GitHub [@Kakise](https://github.com/Kakise)
