--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,7 +1,7 @@
 ---
-type: page
-title: About
-date: 2021-03-19
+type: posts
+title: Me
+date: 2022-04-25
 ---
 
 # Kakise's Blog
@@ -38,5 +38,11 @@ And I previously made a homebridge plugin to have Tuya door sensors in HomeKit b
 
 ---
 
+# Socials
+
 - Twitter [@STaaissat](https://twitter.com/STaaissat)
 - GitHub [@Kakise](https://github.com/Kakise)
+
+---
+
+# Recent posts
