--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -27,9 +27,10 @@ And I previously made a homebridge plugin to have Tuya door sensors in HomeKit b
 
 ### Work Experience
 
-- C++ Developer @ Coop-R, Paris - 04/2022, now
+- Data Engineer @ Artefact, Paris - 10/2022, now
+- C++ Developer @ Coop-R, Paris - 04/2022, 07/2022
 - Tech transition chief @ Immocitiz, Paris - 06/2021, 02/2022
-- Software Engineering Consultant @ Independent contractor, Paris - 02/2020, 06/2021
+- Software Engineering Consultant @ Independent Contractor, Paris - 02/2020, 06/2021
 
 ### Academic experience
 
@@ -40,7 +41,6 @@ And I previously made a homebridge plugin to have Tuya door sensors in HomeKit b
 
 # Socials
 
-- Twitter [@STaaissat](https://twitter.com/STaaissat)
 - GitHub [@Kakise](https://github.com/Kakise)
 
 ---
